# claude-agent

./: .gitignore  README.md  pyproject.toml
claude_gateway/: __init__.py  config.py  protocols.py  server.py  session_store.py  subprocess_runner.py
scripts/: dev_server.sh  test_chat_completions.sh  test_messages.sh  test_messages_streaming.sh  test_streaming.sh
tests/: conftest.py  test_config.py  test_protocol_chat_completions.py  test_protocol_messages.py  test_session.py  test_sse.py  test_subprocess_runner.py
tests/fixtures/: fake_claude.py
